[fix][frontend] Fixed previous bugs for computer usage, will be tested on mobile

--- a/myapp/static/css/home.css
+++ b/myapp/static/css/home.css
@@ -1,42 +1,38 @@
-.bg-light{
+html, body {
     height: 100%;
-    width: 100%;
     margin: 0;
+  }
+  
+.section {
+    height: 50%;   
 }
-
-.col-8{
-    height: 100%
-
-}.row {
-    height: 100%;
-    width: 100%;
-}
-.chat .message p{
+  
+  @media (min-width: 990px) {
+    .section {
+      height: 100%;
+    }
+  }
+  #referenceColumn{
+    flex-grow: 1;
+    overflow: auto;
+    white-space: pre-wrap;
+  }
+  
+  #chatScroll {
+    min-height: 0;
+    overflow-y: auto;
+  }
+  
+  .chat .message p {
     background: lightskyblue;
-    padding: 10% 10%;
-    border-radius: 5% 5% 0 5%;
+    padding: 12px 16px;
+    border-radius: 10px 10px 0 10px;
     color: black;
-}
-
-.chat .incoming p{
+  }
+  
+  .chat .incoming p {
     background-color: aliceblue;
-    border-radius: 5% 5% 5% 0;
-}
-.chat .outgoing {
-    text-align: right;
-    justify-content: flex-end;
-    margin: 20px 0px;
-}
-#references {
-    overflow-wrap: break-word;  
-    word-wrap: break-word;    
-    overflow: hidden;     
-    white-space: pre-wrap; 
-    width: 100%;
-}
-.btn{
-    width: 100%;
-    height: 100%;
-    text-align: center;
-}
+    border-radius: 10px 10px 10px 0;
+  }
+  
 
